--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.criizziy.speakingchat.login"
-    android:background="#ff4747">
+    android:background="#ff4747"
+    android:clickable="true">
 
     <TextView
         android:layout_width="wrap_content"
@@ -87,7 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:text="Registrar"
-        android:id="@+id/button"
+        android:id="@+id/btnRegistrar"
         android:textSize="20dp"
         android:textColor="#fff"
         android:background="#ff3737"
@@ -96,5 +97,14 @@
         android:layout_alignStart="@+id/btnEntrar"
         android:layout_alignRight="@+id/btnEntrar"
         android:layout_alignEnd="@+id/btnEntrar" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="olvidaste tu contraseña ?"
+        android:id="@+id/btnRecordar"
+        android:layout_below="@+id/txtPassword"
+        android:layout_centerHorizontal="true"
+        android:textSize="20dp" />
 
 </RelativeLayout>
