--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         android:textIsSelectable="true" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Contraseña"
@@ -29,7 +29,8 @@
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#fff" />
+        android:textColor="#fff"
+        android:gravity="center" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -73,7 +74,7 @@
         />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Usuario"
@@ -81,30 +82,33 @@
         android:textColor="#fff"
         android:layout_above="@+id/txtUsuario"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:gravity="center" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="¿olvidaste tu contraseña ?"
+        android:id="@+id/btnRecordar"
+        android:layout_below="@+id/txtPassword"
+        android:layout_centerHorizontal="true"
+        android:textSize="20dp"
+        android:gravity="center" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:text="Registrar"
-        android:id="@+id/btnRegistrar"
+        android:layout_height="60dp"
+        android:text="Registrarse"
+        android:id="@+id/button11"
         android:textSize="20dp"
         android:textColor="#fff"
         android:background="#ff3737"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/btnEntrar"
         android:layout_alignLeft="@+id/btnEntrar"
         android:layout_alignStart="@+id/btnEntrar"
         android:layout_alignRight="@+id/btnEntrar"
-        android:layout_alignEnd="@+id/btnEntrar" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="olvidaste tu contraseña ?"
-        android:id="@+id/btnRecordar"
-        android:layout_below="@+id/txtPassword"
-        android:layout_centerHorizontal="true"
-        android:textSize="20dp" />
+        android:layout_alignEnd="@+id/btnEntrar"
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
