--- a/app/src/main/res/layout/activity_ajustes_cuenta.xml
+++ b/app/src/main/res/layout/activity_ajustes_cuenta.xml
@@ -10,7 +10,9 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayout6">
+        android:id="@+id/linearLayout6"
+        android:layout_above="@+id/linearLayout7"
+        android:layout_alignParentLeft="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,9 +34,9 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout6"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout7">
+        android:id="@+id/linearLayout7"
+        android:layout_above="@+id/linearLayout8"
+        android:layout_alignParentLeft="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -56,9 +58,9 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout7"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout8">
+        android:id="@+id/linearLayout8"
+        android:layout_above="@+id/linearLayout9"
+        android:layout_alignParentLeft="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -80,8 +82,11 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout8"
-        android:id="@+id/linearLayout9">
+        android:id="@+id/linearLayout9"
+        android:layout_above="@+id/linearLayout10"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="112dp">
 
         <Button
             android:layout_width="163dp"
@@ -119,9 +124,12 @@
             android:background="#e4e4e4" />
     </LinearLayout>
 
-    <Space
-        android:layout_width="fill_parent"
-        android:layout_height="180px"
-        android:layout_below="@+id/linearLayout10"
+    <ImageView
+        android:layout_width="249dp"
+        android:layout_height="178dp"
+        android:id="@+id/imageView9"
+        android:src="@mipmap/logo6"
+        android:layout_gravity="center_horizontal"
+        android:layout_above="@+id/linearLayout6"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
