--- a/app/src/main/res/layout/activity_ajustes_notificaciones.xml
+++ b/app/src/main/res/layout/activity_ajustes_notificaciones.xml
@@ -16,6 +16,18 @@
         android:layout_alignParentStart="true"
         android:id="@+id/linearLayout11">
 
+        <ImageView
+            android:layout_width="249dp"
+            android:layout_height="178dp"
+            android:id="@+id/imageView8"
+            android:layout_alignParentTop="true"
+            android:src="@mipmap/logo6"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_above="@+id/textView2"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="-30dp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
