--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -16,18 +16,17 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
-        <TextView
-            android:layout_width="fill_parent"
+        <EditText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/editText"
+            android:layout_gravity="center_horizontal"
             android:text="Ozle anderson torres"
-            android:id="@+id/textView13"
-            android:textSize="30dp"
-            android:textAlignment="center"
-            android:textStyle="normal|bold"
             android:textColor="#fff"
-            android:layout_marginTop="20dp"
-            android:textIsSelectable="false"
-            android:gravity="center" />
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:gravity="center_vertical|center"
+            android:typeface="normal" />
 
         <EditText
             android:layout_width="match_parent"
@@ -53,7 +52,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayout15">
+        android:id="@+id/linearLayout15"
+        android:weightSum="1">
 
         <ImageView
             android:layout_width="fill_parent"
@@ -64,7 +64,21 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
-            android:cropToPadding="false" />
+            android:cropToPadding="false"
+            android:layout_marginLeft="200dp" />
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="96dp"
+            android:id="@+id/imageView7"
+            android:layout_alignParentTop="true"
+            android:src="@mipmap/logo6"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_above="@+id/textView2"
+            android:layout_weight="2"
+            android:layout_marginTop="-75dp"
+            android:layout_marginRight="-30dp" />
     </LinearLayout>
 
     <LinearLayout
