--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -65,7 +65,15 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
             android:cropToPadding="false"
-            android:layout_marginLeft="200dp" />
+            android:layout_marginLeft="150dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView12"
+            android:layout_gravity="right"
+            android:src="@mipmap/ajustes"
+            android:layout_marginTop="-45dp" />
 
         <ImageView
             android:layout_width="200dp"
@@ -77,7 +85,7 @@
             android:layout_alignParentEnd="true"
             android:layout_above="@+id/textView2"
             android:layout_weight="2"
-            android:layout_marginTop="-75dp"
+            android:layout_marginTop="-80dp"
             android:layout_marginRight="-30dp" />
     </LinearLayout>
 
