--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -14,7 +14,8 @@
         android:layout_above="@+id/linearLayout18"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="114dp">
+        android:layout_marginBottom="114dp"
+        android:id="@+id/linearLayout19">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -71,13 +72,13 @@
     </LinearLayout>
 
     <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
         android:layout_above="@+id/linearLayout18"
-        android:layout_marginBottom="51dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:indeterminate="false" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="57dp" />
 
 </RelativeLayout>
