--- a/app/src/main/res/layout/activity_ajustes_ayuda.xml
+++ b/app/src/main/res/layout/activity_ajustes_ayuda.xml
@@ -6,4 +6,21 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.criizziy.speakingchat.ajustes_ayuda">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="XD "
+        android:id="@+id/textView15"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="109dp"
+        android:textSize="50dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="VOLVER"
+        android:id="@+id/button13"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
