--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -72,13 +72,12 @@
     </LinearLayout>
 
     <ProgressBar
-        style="?android:attr/progressBarStyleHorizontal"
+        style="?android:attr/progressBarStyleSmall"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:id="@+id/progressBar"
         android:layout_above="@+id/linearLayout18"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="57dp" />
+        android:progressBackgroundTint="#0066FF"
+        android:progressBackgroundTintMode="screen" />
 
 </RelativeLayout>
