--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.criizziy.speakingchat.login"
-    android:background="#ff4747"
+    android:background="#fff"
     android:clickable="true">
 
     <TextView
@@ -100,10 +100,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView5"
-        android:layout_alignParentTop="true"
         android:src="@mipmap/logo6"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_above="@+id/textView2" />
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
