--- a/app/src/main/res/layout/activity_ajustes.xml
+++ b/app/src/main/res/layout/activity_ajustes.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.criizziy.speakingchat.Ajustes">
+    tools:context="com.example.criizziy.speakingchat.Ajustes"
+    android:background="#fff">
 
     <LinearLayout
         android:orientation="vertical"
@@ -14,7 +15,8 @@
         android:baselineAligned="false"
         android:background="#e4e4e4"
         android:layout_below="@+id/linearLayout4"
-        android:layout_alignParentLeft="true">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:layout_width="288dp"
@@ -49,9 +51,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/linearLayout2"
         android:background="#e4e4e4"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/linearLayout5"
-        android:layout_alignParentLeft="true">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:layout_width="288dp"
@@ -85,10 +87,10 @@
         android:layout_height="wrap_content"
         android:background="#e4e4e4"
         android:id="@+id/linearLayout3"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/imageView10"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="151dp">
+        android:layout_marginTop="44dp">
 
         <TextView
             android:layout_width="288dp"
@@ -112,10 +114,9 @@
         android:layout_width="249dp"
         android:layout_height="178dp"
         android:id="@+id/imageView10"
-        android:src="@mipmap/logo6"
+        android:src="@mipmap/logonuevo"
         android:layout_gravity="center_horizontal"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="-20dp" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
