--- a/app/src/main/res/layout/activity_ajustes_cuenta.xml
+++ b/app/src/main/res/layout/activity_ajustes_cuenta.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.criizziy.speakingchat.AjustesCuenta">
+    tools:context="com.example.criizziy.speakingchat.AjustesCuenta"
+    android:background="#fff">
 
     <LinearLayout
         android:orientation="vertical"
@@ -21,7 +22,7 @@
             android:id="@+id/textView7"
             android:layout_gravity="center_horizontal"
             android:textSize="25dp"
-            android:textColor="#1264a3" />
+            android:textColor="#a4a6a6" />
 
         <EditText
             android:layout_width="match_parent"
@@ -45,7 +46,7 @@
             android:id="@+id/textView8"
             android:layout_gravity="center_horizontal"
             android:textSize="25dp"
-            android:textColor="#1264a3" />
+            android:textColor="#a4a6a6" />
 
         <EditText
             android:layout_width="match_parent"
@@ -69,7 +70,7 @@
             android:id="@+id/textView9"
             android:layout_gravity="center_horizontal"
             android:textSize="25dp"
-            android:textColor="#1264a3" />
+            android:textColor="#a4a6a6" />
 
         <EditText
             android:layout_width="match_parent"
@@ -83,10 +84,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/linearLayout9"
+        android:layout_marginBottom="58dp"
         android:layout_above="@+id/linearLayout10"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="112dp">
+        android:layout_alignParentStart="true">
 
         <Button
             android:layout_width="163dp"
@@ -94,7 +95,8 @@
             android:text="Cancelar"
             android:id="@+id/button6"
             android:layout_gravity="right"
-            android:background="#e4e4e4" />
+            android:background="#6bf8ff"
+            android:textColor="#a4a6a6" />
 
         <Button
             android:layout_width="164dp"
@@ -102,7 +104,8 @@
             android:text="Guardar"
             android:id="@+id/button5"
             android:layout_marginTop="-49dp"
-            android:background="#e4e4e4" />
+            android:background="#27a2ff"
+            android:textColor="#FFF" />
 
     </LinearLayout>
 
@@ -121,14 +124,15 @@
             android:text="Cerrar sesión"
             android:id="@+id/button7"
             android:layout_gravity="center_horizontal"
-            android:background="#e4e4e4" />
+            android:background="#27a2ff"
+            android:textColor="#fff" />
     </LinearLayout>
 
     <ImageView
         android:layout_width="249dp"
         android:layout_height="178dp"
         android:id="@+id/imageView9"
-        android:src="@mipmap/logo6"
+        android:src="@mipmap/logonuevo"
         android:layout_gravity="center_horizontal"
         android:layout_above="@+id/linearLayout6"
         android:layout_centerHorizontal="true" />
