--- a/app/src/main/res/layout/activity_ajustes_notificaciones.xml
+++ b/app/src/main/res/layout/activity_ajustes_notificaciones.xml
@@ -4,29 +4,27 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.criizziy.speakingchat.ajustes_notificaciones">
+    tools:context="com.example.criizziy.speakingchat.ajustes_notificaciones"
+    android:background="#fff">
+
+    <ImageView
+        android:layout_width="224dp"
+        android:layout_height="160dp"
+        android:id="@+id/imageView8"
+        android:src="@mipmap/logonuevo"
+        android:layout_gravity="center_horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="1"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout11">
-
-        <ImageView
-            android:layout_width="249dp"
-            android:layout_height="178dp"
-            android:id="@+id/imageView8"
-            android:layout_alignParentTop="true"
-            android:src="@mipmap/logo6"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_above="@+id/textView2"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="-30dp" />
+        android:id="@+id/linearLayout11"
+        android:layout_below="@+id/linearLayout13"
+        android:layout_alignParentLeft="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -51,9 +49,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="1"
+        android:id="@+id/linearLayout12"
         android:layout_below="@+id/linearLayout11"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout12">
+        android:layout_alignParentLeft="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -78,9 +76,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="1"
-        android:layout_below="@+id/linearLayout12"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout13">
+        android:id="@+id/linearLayout13"
+        android:layout_below="@+id/imageView8"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="52dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -122,7 +122,8 @@
                 android:text="Cancelar"
                 android:id="@+id/button8"
                 android:layout_gravity="right"
-                android:background="#e4e4e4" />
+                android:background="#6bf8ff"
+                android:textColor="#a4a6a6" />
 
             <Button
                 android:layout_width="164dp"
@@ -130,7 +131,9 @@
                 android:text="Guardar"
                 android:id="@+id/button9"
                 android:layout_marginTop="-49dp"
-                android:background="#e4e4e4" />
+                android:background="#27a2ff"
+                android:textColor="#fff" />
         </LinearLayout>
     </LinearLayout>
+
 </RelativeLayout>
