--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.criizziy.speakingchat.bienvenida"
-    android:background="#ff4747">
+    android:background="#fff">
 
     <LinearLayout
         android:orientation="vertical"
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/imageView11"
             android:layout_gravity="center_horizontal"
-            android:src="@mipmap/logo4" />
+            android:src="@mipmap/logonuevo" />
     </LinearLayout>
 
     <LinearLayout
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:text="SpeakingChat  "
             android:id="@+id/textView13"
-            android:textColor="#fff"
+            android:textColor="#a4a6a6"
             android:textSize="17dp"
             android:layout_alignTop="@+id/textView"
             android:layout_centerHorizontal="true"
@@ -53,7 +53,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="66dp"
-            android:textColor="#fff"
+            android:textColor="#a4a6a6"
             android:textSize="17dp"
             android:gravity="center" />
 
@@ -64,7 +64,7 @@
             android:id="@+id/textView"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:textColor="#fff"
+            android:textColor="#a4a6a6"
             android:textSize="17dp"
             android:gravity="center"
             android:layout_marginTop="-65dp" />
