--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#fff"
+        android:textColor="#a4a6a6"
         android:gravity="center" />
 
     <EditText
@@ -38,8 +38,8 @@
         android:text="Entrar"
         android:id="@+id/btnEntrar"
         android:textSize="20dp"
-        android:textColor="#fff"
-        android:background="#ff3737"
+        android:textColor="#a4a6a6"
+        android:background="#27a2ff"
         android:layout_below="@+id/txtPassword"
         android:layout_marginTop="55dp"
         android:layout_alignRight="@+id/btnRecordar"
@@ -64,7 +64,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Usuario"
         android:id="@+id/textView2"
-        android:textColor="#fff"
+        android:textColor="#a4a6a6"
         android:layout_above="@+id/txtUsuario"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -87,8 +87,8 @@
         android:text="Registrarse"
         android:id="@+id/button11"
         android:textSize="20dp"
-        android:textColor="#fff"
-        android:background="#ff3737"
+        android:textColor="#a4a6a6"
+        android:background="#6bf8ff"
         android:layout_below="@+id/btnEntrar"
         android:layout_alignLeft="@+id/btnEntrar"
         android:layout_alignStart="@+id/btnEntrar"
@@ -100,8 +100,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView5"
-        android:src="@mipmap/logo6"
+        android:src="@mipmap/logonuevo"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/textView2" />
 
 </RelativeLayout>
