--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.criizziy.speakingchat.registro"
-    android:background="#ff4747">
+    android:background="#fff">
 
     <LinearLayout
         android:orientation="vertical"
@@ -25,7 +25,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:textSize="25dp"
-            android:textColor="#fff" />
+            android:textColor="#a4a6a6" />
 
         <EditText
             android:layout_width="fill_parent"
@@ -48,7 +48,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:textSize="25dp"
-            android:textColor="#fff" />
+            android:textColor="#a4a6a6" />
 
         <EditText
             android:layout_width="fill_parent"
@@ -67,7 +67,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:textSize="25dp"
-            android:textColor="#fff" />
+            android:textColor="#a4a6a6" />
 
         <EditText
             android:layout_width="fill_parent"
@@ -86,7 +86,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:textSize="25dp"
-            android:textColor="#fff" />
+            android:textColor="#a4a6a6" />
 
         <EditText
             android:layout_width="fill_parent"
@@ -111,9 +111,9 @@
             android:layout_height="wrap_content"
             android:text="Registrarse"
             android:id="@+id/button3"
-            android:background="#ff3737"
+            android:background="#1264a3"
             android:textSize="20dp"
-            android:textColor="#fff"
+            android:textColor="#a4a6a6"
             android:layout_above="@+id/button4"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -125,8 +125,8 @@
             android:layout_height="wrap_content"
             android:text="Cancelar"
             android:id="@+id/button4"
-            android:background="#ff3737"
-            android:textColor="#fff"
+            android:background="#6bf8ff"
+            android:textColor="#a4a6a6"
             android:textSize="20dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
@@ -138,7 +138,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView6"
-        android:src="@mipmap/logo6"
+        android:src="@mipmap/logonuevo"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/linearLayout17" />
